# hangman

./: .gitignore  AGENTS.md  LOG.md  gameLogic.py  guidelines  guidelines.txt  ioCli.py  main.py  pyproject.toml  pytest.ini  uiTkinter.py  wordBank.py
hangmanTests/: conftest.py  test_gameLogic.py  test_ioCli.py  test_main.py  test_uiTkinter.py  test_wordBank.py
